# chaos-the-game

./: Cargo.toml  README.md
assets/maps/: map_01.json
src/: ecs.rs  game.rs  keyboard.rs  main.rs
src/ecs/: components.rs  draw_systems.rs  input.rs  physics_systems.rs  player.rs  startup_systems.rs
src/game/: camera.rs  components.rs  draw.rs  draw_systems.rs  input.rs  map.rs  mod.rs  physics.rs  physics_systems.rs  player.rs  resources.rs  startup.rs  startup_systems.rs
src/game/components/: hitbox.rs  mod.rs
