[package]
name = "a-rust-game"
version = "0.1.0"
edition = "2021"

[dependencies]
enum-map = "2.7.3"
itertools = "0.13.0"
sdl2 = { version = "0.37.0", features = ["gfx", "static-link", "use-vcpkg"] }
strum = { version = "0.26.3", features = ["derive"] }
typed-builder = "0.20.0"

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-gfx"]
git = "https://github.com/microsoft/vcpkg"
rev = "c82f746"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
