[package]
name = "a-rust-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = "0.15.0-rc.3"
enum-map = "2.7.3"
sdl2 = { version = "0.37.0", features = ["gfx", "static-link", "use-vcpkg"] }
typed-builder = "0.20.0"

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-gfx"]
git = "https://github.com/microsoft/vcpkg"
rev = "c82f746"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
